fix: Adjust the slider sizing
This commit fixes a problem with the slider cursor being too big. Makes the slider size non relative.

--- a/ui.kv
+++ b/ui.kv
@@ -52,9 +52,9 @@
                     on_value: app.update_day_hour(self.value)
                     # Slider color properties
                     value_track: root.slider_track_color
-                    value_track_width: f'5 dp'
+                    value_track_width: '5dp'
                     #cursor_image: ''  # Remove default cursor
-                    cursor_size: (f'{self.value_track_width * 4}dp', f'{self.value_track_width * 4}dp')
+                    cursor_size: '20dp', '20dp'
                     canvas.after:
                         Color:
                             rgba: root.slider_cursor_color
