refactor: Fix typos

--- a/ui.kv
+++ b/ui.kv
@@ -54,7 +54,7 @@
                     value_track: root.slider_track_color
                     value_track_width: '5dp'
                     #cursor_image: ''  # Remove default cursor
-                    cursor_size: '20dp', '20dp'
+                    cursor_size: ('20dp', '20dp')
                     canvas.after:
                         Color:
                             rgba: root.slider_cursor_color
