--- a/ui.kv
+++ b/ui.kv
@@ -361,10 +361,12 @@
                 on_state: app.toggle_checkbox('bonus_performance', self.state)
 
     # output part
-    Label:
+    Button:
         id: result_label
         text: 'Зарплата: 0.00'
         color: root.text_color
+        background_color: 0, 0, 0, 0 # Transparent
+        on_press: app.set_theme()
         # sizing
         # make label took bottom third of the screen
         size_hint_y: 1/3
