--- a/ui.kv
+++ b/ui.kv
@@ -45,6 +45,7 @@
                 Slider:
                     id: day_hour_slider
                     size: self.size
+                    size_hint_x: 2/3
                     min: 250
                     max: 350
                     step: 5
@@ -67,7 +68,7 @@
                     id: day_hour_label
                     text: str(int(day_hour_slider.value))
                     # sizing
-                    size_hint_x: 1/2
+                    size_hint_x: 1/3
                     font_size: (self.width + self.height) / 10
                     text_size: self.size
                     halign: 'center'
@@ -376,3 +377,10 @@
         valign: 'middle'
         shorten: True
         # sizing
+        canvas.before:
+            Color:
+                rgba: 0, 0, 0, .2
+            RoundedRectangle:
+                pos: self.pos
+                size: self.size
+                radius: [20]
