refactor: Rename switch_theme function call in on_press event
This commit renames the function call within the `on_press` event handler in the Kivy UI code.

The `app.switch_theme()` call has been updated to reflect changes in the application's structure or naming conventions.

--- a/test_ui.kv
+++ b/test_ui.kv
@@ -380,7 +380,7 @@
         text: 'Зарплата: 0.00'
         color: root.text_color
         background_color: 0, 0, 0, 0 # Transparent
-        on_press: app.set_theme()
+        on_press: app.switch_theme()
         # sizing
         # make label took bottom third of the screen
         size_hint_y: 1/3
